# Nevo

./: .gitignore  README.md  Untitled Diagram.drawio  index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.react.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  p.ps1  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: copy_snapshot_command.rs  generate_args_command.rs  lauch_game_command.rs  read_args_command.rs  rewrite_args_command.rs  write_args_command.rs
src-tauri/src/tests/: copy_snapshot_test.rs  generate_args_test.rs  launch_game_test.rs  read_argument_test.rs  write_args_test.rs
src-tauri/src/utils/: argument_wrapper.rs  copy_snapshot.rs  create_shortcut.rs  generate_args.rs  is_minecraft_running.rs  launch_game.rs  read_arguments.rs  rewrite_args.rs  shift_array.rs  write_arguments.rs
src/pages/: NoTauriWindow.tsx
src/utils/: copy_files.ts  is_tauri_windows.ts  log.ts  rewrite_args.ts  shift_array.ts
